--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "playtest_landing_page",
   "version": "1.0.0",
   "description": "",
+  "main": "router.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
